# hsr_description

./: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
.circleci/: config.yml
launch/: display.launch  display.rviz
robots/: hsrb4s.obj.urdf  hsrb4s.urdf  hsrb4s.urdf.xacro  hsrb4s_obj.urdf  hsrb4s_obj.urdf.xacro  upload_hsrb.launch
urdf/: common.xacro  materials.urdf.xacro
urdf/arm_v0/: arm.gazebo.xacro  arm.transmission.xacro  arm.urdf.xacro
urdf/base_v2/: base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro
urdf/hand_v0/: hand.gazebo.xacro  hand.transmission.xacro  hand.urdf.xacro
urdf/head_v2/: head.gazebo.xacro  head.transmission.xacro  head.urdf.xacro
urdf/sensors/: ft_sensor.gazebo.xacro  ft_sensor.urdf.xacro  imu.gazebo.xacro  imu.urdf.xacro  laser.gazebo.xacro  laser.urdf.xacro  rgb_sensor.gazebo.xacro  rgb_sensor.urdf.xacro  rgbd_sensor.gazebo.xacro  rgbd_sensor.urdf.xacro  sensors.xacro  wide_camera.gazebo.xacro  wide_camera.urdf.xacro
urdf/torso_v0/: torso.gazebo.xacro  torso.urdf.xacro
urdf/wrist_v0/: wrist.gazebo.xacro  wrist.transmission.xacro  wrist.urdf.xacro
